# theball

./: CLAUDE.md  PRODUCT_KNOWLEDGE_TESTING.md  ProjectContext.md  analyze-tasks.cjs  debug-db.ts  drizzle.config.ts  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
.claude/: launch.json
.continue/prompts/: new-prompt.md
.github/: copilot-instructions.md
.github/workflows/: release.yml
drizzle/: 0000_loud_starfox.sql  0000_silly_pretty_boy.sql  0001_funny_puppet_master.sql  0001_light_grey_gargoyle.sql  0002_add_transcripts.sql  0003_transcript_speaker_names.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
feature-workflow/: 00-README.md  01-cto.md  02-explorer.md  03-plan.md  04-implementation.md  05-review.md  06-testing.md  07-deployment.md
feature-workflow/product-knowledge/: 01-cto.md  02-explorer.md  03-plan.md
flashcards/: ai-prompting-vs-training.md
mcp-server/: package-lock.json  package.json
mcp-server/src/: index.ts
mobile/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
mobile/public/: manifest.json
mobile/src/: App.tsx  ai.ts  db.ts  vite-env.d.ts
src/: App.tsx  index.css  index.tsx  main.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AITaskEntryModal.tsx  Board.tsx  Column.tsx  EditorToolbar.tsx  GoalCard.tsx  GoalDetailPanel.tsx  GoalTimeline.tsx  GoalView.tsx  Header.tsx  HealthView.tsx  KnowledgeView.tsx  MarkdownToolbar.tsx  MeetingHub.tsx  MeetingInsightCard.tsx  MeetingSpaceView.tsx  (+14 more)
(+41 files in other folders)
