[package]
name = "app"
version = "0.1.18"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

# TAURI 2
tauri = { version = "2", features = [] }

# PLUGINS
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Whisper upload (multipart/form-data)
reqwest = { version = "0.12.24", features = ["json", "multipart"] }

# async runtime for reqwest
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

# ENV loader
dotenvy = "0.15"
